# sheet2qr

./: .gitignore  LICENSE  pyproject.toml  readme.org  requirements.txt
sheet2qr/: __main__.py  main.py
tests/: #test_qr_generation.py#  .#  .~lock.sample_sheet.csv#  sample_sheet.csv  sample_sheet.xlsx  test_cli.py  test_sheet2qr.py  ~$sample_sheet.xlsx
